--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
   <div id="root"></div>
   <script src="./bundle.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.4/lodash.js"></script>
 </body>
 </html>
