--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>React-Flux-Contacts-Dashboard</title>
+  <title>Contacts Dashboard | Your personalized address book dashboard</title>
   <link rel='shortcut icon' type='image/x-icon' href='./assets/favicon.ico' />
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
